// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`happy path should return the expected config 1`] = `
{
  "action_url": "http://test-repo.com/testing/actions/runs/12",
  "author": "luvi",
  "channel": "C1234567890",
  "job_status": "success",
  "mention_person": "drewsue",
  "message_id": "1234567890",
  "release_notes": "notes!",
  "repository": "test-repo",
  "slack_user_id": "LUVI_TEST",
  "startedTimestamp": "03/31/2020, 7:00:00 PM CDT",
  "status": "done",
  "stoppedTimestamp": "03/31/2020, 7:00:00 PM CDT",
  "type": undefined,
  "version": "v42.0.0",
}
`;

exports[`no release or commit should return the expected config 1`] = `
{
  "action_url": "http://test-repo.com/testing/actions/runs/12",
  "author": "drewsue",
  "channel": "C1234567890",
  "job_status": "success",
  "mention_person": "drewsue",
  "message_id": "1234567890",
  "release_notes": "no release notes",
  "repository": "test-repo",
  "slack_user_id": "DREWSUE_TESTING",
  "startedTimestamp": "03/31/2020, 7:00:00 PM CDT",
  "status": "done",
  "stoppedTimestamp": "03/31/2020, 7:00:00 PM CDT",
  "type": undefined,
  "version": "123456",
}
`;

exports[`no release should return the expected config 1`] = `
{
  "action_url": "http://test-repo.com/testing/actions/runs/12",
  "author": "drewsue",
  "channel": "C1234567890",
  "job_status": "success",
  "mention_person": "drewsue",
  "message_id": "1234567890",
  "release_notes": "test commit 1*test commit 2",
  "repository": "test-repo",
  "slack_user_id": "DREWSUE_TESTING",
  "startedTimestamp": "03/31/2020, 7:00:00 PM CDT",
  "status": "done",
  "stoppedTimestamp": "03/31/2020, 7:00:00 PM CDT",
  "type": undefined,
  "version": "123456",
}
`;

exports[`release created by github should return the expected config 1`] = `
{
  "action_url": "http://test-repo.com/testing/actions/runs/12",
  "author": "drewsue",
  "channel": "C1234567890",
  "job_status": "success",
  "mention_person": "drewsue",
  "message_id": "1234567890",
  "release_notes": "test commit 1*test commit 2",
  "repository": "test-repo",
  "slack_user_id": "DREWSUE_TESTING",
  "startedTimestamp": "03/31/2020, 7:00:00 PM CDT",
  "status": "done",
  "stoppedTimestamp": "03/31/2020, 7:00:00 PM CDT",
  "type": undefined,
  "version": "123456",
}
`;
